@@ -1,3 +1,11 @@
+Fri Feb 21 08:27:19 2014  Eric Wong  <e@80x24.org>
+
+	* include/ruby/ruby.h (RB_GC_GUARD):
+	  use rb_gc_guarded_ptr_val on non-GCC/MSC
+	* gc.c (rb_gc_guarded_ptr_val): rename and adjust argument.
+	  RB_GC_GUARD should be robust enough for any compiler.
+	  [ruby-core:60816] [Bug #7805]
+
 Thu Feb 20 22:21:26 2014  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/raddrinfo.c (numeric_getaddrinfo): Use xcalloc.
